make prevBtn, fix mobile scrollbar
I revised problems that displays have a scroll bar despite to setting height 100vh in mobile using js codes and css (I made setScreenSize() and new variable --vh). Layout's height propertys are changed from vh to %. I made prevButton for going previous page. I tested prev btn has no flaw in its function and saving to db. I added user-scalable=no in viewport of meta tag for solving no return to first view after zoom. I swap the page2 to page3 in test1. I append preloading function in test1-data.js. I'm just checking images uploaded to browser when test1 started, not checking it will have advantages of processing speed in going next page. I think problems that images not showed in safari is maybe caused by avif format.

--- a/public/css/test1.css
+++ b/public/css/test1.css
@@ -11,7 +11,7 @@ body {
   background-size: cover;
   text-align: center;
   color: white;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 #qna {
@@ -20,6 +20,7 @@ body {
   background-size: cover;
   text-align: center;
   color: white;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 #result {
@@ -29,27 +30,27 @@ body {
 }
 
 .tLayout {
-  height: 30vh;
+  height: 30%;
 }
 
 .mLayout {
-  height: 50vh;
+  height: 50%;
 }
 
 .bLayout {
-  height: 20vh;
+  height: 20%;
 }
 
 .tLayout2 {
-  height: 10vh;
+  height: 10%;
 }
 
 .mLayout2 {
-  height: 40vh;
+  height: 40%;
 }
 
 .bLayout2 {
-  height: 50vh;
+  height: 50%;
 }
 
 .buttonBox {
@@ -66,8 +67,30 @@ body {
   opacity: 0.3;
 }
 
-.status {
+.statusLayout{
   height: 20px;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.prevButton{
+  height: 20px;
+  width: 20px;
+  line-height: 100%;
+  padding-top: 1px;
+  padding-right: 1px;
+  margin-right: 5px;
+  border-radius: 50%;
+  background-color: white;
+  opacity: 0.6;
+  color: rgb(2, 26, 54);
+  text-align: center;
+}
+
+.status {
+  height: 100%;
   width: 80%;
   background-color: rgb(20, 36, 55);
   border-radius: 20px;
