--- a/public/css/test2.css
+++ b/public/css/test2.css
@@ -11,7 +11,7 @@ body {
   background-size: cover;
   text-align: center;
   color: white;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 #qna {
@@ -20,6 +20,7 @@ body {
   background-size: cover;
   text-align: center;
   color: white;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 #result {
@@ -29,27 +30,27 @@ body {
 }
 
 .tLayout {
-  height: 30vh;
+  height: 30%;
 }
 
 .mLayout {
-  height: 50vh;
+  height: 50%;
 }
 
 .bLayout {
-  height: 20vh;
+  height: 20%;
 }
 
 .tLayout2 {
-  height: 10vh;
+  height: 10%;
 }
 
 .mLayout2 {
-  height: 40vh;
+  height: 40%;
 }
 
 .bLayout2 {
-  height: 50vh;
+  height: 50%;
 }
 
 .buttonBox {
@@ -64,6 +65,28 @@ body {
   width: 75%;
   font-size: 13px;
   opacity: 0.3;
+}
+
+.statusLayout{
+  height: 20px;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.prevButton{
+  height: 20px;
+  width: 20px;
+  line-height: 100%;
+  padding-top: 1px;
+  padding-right: 1px;
+  margin-right: 5px;
+  border-radius: 50%;
+  background-color: white;
+  opacity: 0.6;
+  color: rgb(2, 26, 54);
+  text-align: center;
 }
 
 .status {
